@@ -1,3 +1,8 @@
+2002-11-05  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>
+
+	* kvu_locks.h: removed dependency to asm/atomic.h
+	* kvu_locks.h (add,sub,increment,decrement): removed
+	
 2002-10-16  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>
 
 	* NOTE: from now on, the library version 
